add layout contacts price

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,8 +38,10 @@
     {
       "path": "src/scss/main.scss",
       "imports": [
+        "src/scss/misc/_vars.scss",
         "src/scss/misc/_mixin.scss",
-        "src/scss/misc/_adjustment.scss"
+        "src/scss/misc/_adjustment.scss",
+        "src/scss/layout/_price.scss"
       ]
     }
   ],
