create branch testimonials_diagram

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -39,7 +39,8 @@
       "path": "src/scss/main.scss",
       "imports": [
         "src/scss/misc/_mixin.scss",
-        "src/scss/misc/_adjustment.scss"
+        "src/scss/misc/_adjustment.scss",
+        "src/scss/layout/_diagramm.scss"
       ]
     }
   ],
