table price on index_price_contacts

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -15,7 +15,6 @@
   "fileTree": {
     "expandedDirs": [
       "src",
-      "src/scss",
       "dist",
       "dist/css",
       "src/scss/misc",
@@ -46,7 +45,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
