--- a/prepros-6.config
+++ b/prepros-6.config
@@ -18,9 +18,12 @@
       "src/scss",
       "dist",
       "dist/css",
-      "src/scss/misc",
       "src/scss/libs",
-      "src/scss/libs/fontawesome"
+      "src/scss/libs/fontawesome",
+      "src/scss/layout",
+      "src/scss/libs/normalize",
+      "src/scss/misc",
+      "src/scss/layout/components"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -39,7 +42,12 @@
       "path": "src/scss/main.scss",
       "imports": [
         "src/scss/misc/_mixin.scss",
-        "src/scss/misc/_adjustment.scss"
+        "src/scss/misc/_adjustment.scss",
+        "src/scss/layout/components/_btn-download.scss",
+        "src/scss/layout/components/_attachment-logo.scss",
+        "src/scss/misc/_vars.scss",
+        "src/scss/layout/_heder.scss",
+        "src/scss/layout/_intro.scss"
       ]
     }
   ],
