Made Price table. Made Desltop version photo page: preview without header, slider

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -40,12 +40,13 @@
         "src/scss/misc/_vars.scss",
         "src/scss/misc/_mixin.scss",
         "src/scss/misc/_adjustment.scss",
-        "src/scss/layout/_price.scss"
+        "src/scss/layout/_price.scss",
+        "src/scss/layout/_photo_desktop_preview.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
