--- a/prepros-6.config
+++ b/prepros-6.config
@@ -43,11 +43,15 @@
       "imports": [
         "src/scss/misc/_mixin.scss",
         "src/scss/misc/_adjustment.scss",
+        "src/scss/misc/_vars.scss",
         "src/scss/layout/components/_btn-download.scss",
         "src/scss/layout/components/_attachment-logo.scss",
-        "src/scss/misc/_vars.scss",
+        "src/scss/layout/components/_social.scss",
         "src/scss/layout/_heder.scss",
-        "src/scss/layout/_intro.scss"
+        "src/scss/layout/_intro.scss",
+        "src/scss/layout/_form.scss",
+        "src/scss/layout/_footer.scss",
+        "src/scss/misc/_responsive.scss"
       ]
     }
   ],
