Add contact section 16.11.2017 13:52

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,17 +10,33 @@
     {
       "path": "src/scss/misc/_mixin.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "src/scss/layout/_contact.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "src/scss/layout/_inform.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "src/scss/misc/_vars.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "src/scss/misc/_adjustment.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "src",
       "src/scss",
       "dist",
       "dist/css",
       "src/scss/misc",
       "src/scss/libs",
-      "src/scss/libs/fontawesome"
+      "src/scss/layout",
+      "src"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -39,7 +55,10 @@
       "path": "src/scss/main.scss",
       "imports": [
         "src/scss/misc/_mixin.scss",
-        "src/scss/misc/_adjustment.scss"
+        "src/scss/misc/_vars.scss",
+        "src/scss/misc/_adjustment.scss",
+        "src/scss/layout/_inform.scss",
+        "src/scss/layout/_contact.scss"
       ]
     }
   ],
