--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,7 @@
   "fileConfigs": [
     {
       "path": "src/scss/main.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/main.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/main.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     },
     {
       "path": "src/scss/misc/_mixin.scss",
@@ -18,9 +18,12 @@
       "src/scss",
       "dist",
       "dist/css",
-      "src/scss/misc",
       "src/scss/libs",
-      "src/scss/libs/fontawesome"
+      "src/scss/libs/fontawesome",
+      "src/scss/layout",
+      "src/scss/libs/normalize",
+      "src/scss/misc",
+      "src/scss/layout/components"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
