--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,17 +10,47 @@
     {
       "path": "src/scss/misc/_mixin.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "dist/css/main.css",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"dist/css/main.css\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "src/scss/layout/_diagramm.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "src/scss/layout/_testimonial.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "src/scss/libs/fontawesome/font-awesome.css",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "src/scss/libs/normalize/normalize.css",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "src/scss/misc/_adjustment.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "src/scss/misc/_vars.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
+      "src/scss/libs",
+      "src/css",
+      "src/css/misc",
+      "src/scss/libs/normalize",
+      "src/scss/misc",
+      "dist",
       "src",
       "src/scss",
-      "dist",
-      "dist/css",
-      "src/scss/misc",
-      "src/scss/libs",
-      "src/scss/libs/fontawesome"
+      "src/scss/layout"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -38,9 +68,11 @@
     {
       "path": "src/scss/main.scss",
       "imports": [
+        "src/scss/misc/_vars.scss",
         "src/scss/misc/_mixin.scss",
         "src/scss/misc/_adjustment.scss",
-        "src/scss/layout/_diagramm.scss"
+        "src/scss/layout/_diagramm.scss",
+        "src/scss/layout/_testimonial.scss"
       ]
     }
   ],
