--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,52 +5,25 @@
   "fileConfigs": [
     {
       "path": "src/scss/main.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/main.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/main.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     },
     {
       "path": "src/scss/misc/_mixin.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
-    },
-    {
-      "path": "dist/css/main.css",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"dist/css/main.css\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":\"-dist\"}"
-    },
-    {
-      "path": "src/scss/layout/_diagramm.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
-    },
-    {
-      "path": "src/scss/layout/_testimonial.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
-    },
-    {
-      "path": "src/scss/libs/fontawesome/font-awesome.css",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":\"-dist\"}"
-    },
-    {
-      "path": "src/scss/libs/normalize/normalize.css",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":\"-dist\"}"
-    },
-    {
-      "path": "src/scss/misc/_adjustment.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
-    },
-    {
-      "path": "src/scss/misc/_vars.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "src/scss/libs",
-      "src/css",
-      "src/css/misc",
-      "src/scss/libs/normalize",
-      "src/scss/misc",
-      "dist",
       "src",
       "src/scss",
-      "src/scss/layout"
+      "dist",
+      "dist/css",
+      "src/scss/libs",
+      "src/scss/libs/fontawesome",
+      "src/scss/layout",
+      "src/scss/libs/normalize",
+      "src/scss/misc",
+      "src/scss/layout/components"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
