--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,6 +10,10 @@
     {
       "path": "src/scss/misc/_mixin.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "src/scss/misc/_responsive-photopage.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
@@ -58,7 +62,8 @@
         "src/scss/layout/_footer.scss",
         "src/scss/layout/_photo_desktop_preview.scss",
         "src/scss/layout/_form.scss",
-        "src/scss/misc/_responsive.scss"
+        "src/scss/misc/_responsive.scss",
+        "src/scss/misc/_responsive-photopage.scss"
       ]
     }
   ],
