--- a/prepros-6.config
+++ b/prepros-6.config
@@ -18,12 +18,9 @@
       "src/scss",
       "dist",
       "dist/css",
-      "src/scss/libs",
       "src/scss/libs/fontawesome",
-      "src/scss/layout",
       "src/scss/libs/normalize",
-      "src/scss/misc",
-      "src/scss/layout/components"
+      "src/scss/layout"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
