--- a/prepros-6.config
+++ b/prepros-6.config
@@ -58,13 +58,13 @@
         "src/scss/layout/_footer.scss",
         "src/scss/layout/_photo_desktop_preview.scss",
         "src/scss/layout/_form.scss",
-        "src/scss/misc/_responsive.scss",
-        "src/scss/misc/_responsive-photopage.scss"
+        "src/scss/layout/_responsive.scss",
+        "src/scss/layout/_responsive-photopage.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
